Added basic frontend with assets and login page

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,3 +1,16 @@
-body {
-    background-color: lightgray;
-}
+/** Fixed import order alfa group */
+@import "vars";
+@import "themes";
+@import "media";
+
+/** Alphabetical beta group order */
+@import "animations";
+@import "fonts";
+@import "scrollbars";
+
+/** Gamma group */
+@import "default";
+@import "global";
+
+/** Delta group */
+@import "pages/index";
