--- a/assets/styles/pages/_login.scss
+++ b/assets/styles/pages/_login.scss
@@ -48,6 +48,12 @@
   margin-bottom: 10px;
 }
 
+.login-page-form-subtitle {
+  text-align: center;
+  margin-bottom: 10px;
+  font-size: 12px;
+}
+
 .login-page-input-label {
   margin-top: 5px;
 
@@ -81,4 +87,10 @@
   &:hover {
     background: rgba($colorSuccess, 0.75);
   }
+}
+
+.login-page-input-error {
+  font-size: 10px;
+  text-align: right;
+  color: $colorRed;
 }
