--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -1,19 +1,30 @@
 <form method="post" action="{{ path('app_register') }}" class="register-page-form-wrapper">
     <h2 class="login-page-form-title">lub zarejestruj</h2>
 
-    <div class="login-page-input-wrapper">
+    {% if info_register %}
+        <h3 class="login-page-form-subtitle">
+            {{ info_register }}
+        </h3>
+    {% endif %}
+
+    <div class="login-page-input-wrapper {{ has_field_error(errors ?? [], 'nick') ? 'error' : null }}">
         <label for="register-nick" class="login-page-input-label">Nick</label>
         <input
                 type="text"
-                value="{{ last_username ?? "" }}"
-                name="id"
+                value="{{ register_nick ?? "" }}"
+                name="nick"
                 id="register-nick"
                 class="login-page-input"
                 required
         >
+        {% if has_field_error(errors ?? [], 'nick') %}
+            <span class="login-page-input-error">
+                {{ get_field_error(errors, 'nick').message }}
+            </span>
+        {% endif %}
     </div>
 
-    <div class="login-page-input-wrapper">
+    <div class="login-page-input-wrapper {{ has_field_error(errors ?? [], 'password') ? 'error' : null }}">
         <label for="register-password" class="login-page-input-label">Hasło</label>
         <input
                 type="password"
@@ -22,9 +33,14 @@
                 class="login-page-input"
                 required
         >
+        {% if has_field_error(errors ?? [], 'password') %}
+            <span class="login-page-input-error">
+                {{ get_field_error(errors, 'password').message }}
+            </span>
+        {% endif %}
     </div>
 
-    <div class="login-page-input-wrapper">
+    <div class="login-page-input-wrapper {{ has_field_error(errors ?? [], 'password-repeat') ? 'error' : null }}">
         <label for="register-password-repeat" class="login-page-input-label">Powtórz hasło</label>
         <input
                 type="password"
@@ -33,6 +49,11 @@
                 class="login-page-input"
                 required
         >
+        {% if has_field_error(errors ?? [], 'password-repeat') %}
+            <span class="login-page-input-error">
+                {{ get_field_error(errors, 'password-repeat').message }}
+            </span>
+        {% endif %}
     </div>
 
     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
