--- a/templates/security/index.html.twig
+++ b/templates/security/index.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Logowanie{% endblock %}
 
 {% block body %}
+    {{ dump() }}
     <div class="login-page-wrapper">
         <div class="login-page-inner-wrapper">
             {% include 'security/login.html.twig' %}
