--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,20 +1,31 @@
 <form method="post" action="{{ path('app_login') }}" class="login-page-form-wrapper">
     <h2 class="login-page-form-title">Zaloguj się</h2>
 
-    <div class="login-page-input-wrapper">
+    {% if (info_login ?? false) %}
+        <h3 class="login-page-form-subtitle">
+            {{ info_login }}
+        </h3>
+    {% endif %}
+
+    <div class="login-page-input-wrapper {{ (error ?? false) ? 'error' : null }}">
         <label for="login-nick" class="login-page-input-label">Nick</label>
         <input
                 type="text"
-                value="{{ last_username ?? "" }}"
-                name="id"
+                value="{{ login_username ?? "" }}"
+                name="nick"
                 id="login-nick"
                 class="login-page-input"
                 autocomplete="username"
                 required
         >
+        {% if (error ?? false) %}
+            <span class="login-page-input-error">
+                Niepoprawny login
+            </span>
+        {% endif %}
     </div>
 
-    <div class="login-page-input-wrapper">
+    <div class="login-page-input-wrapper {{ (error ?? false) ? 'error' : null }}">
         <label for="login-password" class="login-page-input-label">Hasło</label>
         <input
                 type="password"
@@ -24,6 +35,11 @@
                 autocomplete="current-password"
                 required
         >
+        {% if (error ?? false) %}
+            <span class="login-page-input-error">
+                lub hasło
+            </span>
+        {% endif %}
     </div>
 
     <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
