--- a/assets/styles/pages/_login.scss
+++ b/assets/styles/pages/_login.scss
@@ -1,6 +1,6 @@
 .login-page-wrapper {
-  min-height: 100vh;
-  min-width: 100vw;
+  min-height: calc(100vh - 50px);
+  min-width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
