--- a/assets/styles/pages/_menu.scss
+++ b/assets/styles/pages/_menu.scss
@@ -1,7 +1,8 @@
 .menu {
   position: sticky;
+  z-index: 10;
   top: 0;
-  width: 100vw;
+  width: 100%;
   height: 40px;
   display: flex;
   background: $colorBlue;
