--- a/templates/layout/index.html.twig
+++ b/templates/layout/index.html.twig
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     <meta name="viewport" content="width=device-width"/>
+    <script src="https://kit.fontawesome.com/2fc1cc993d.js" crossorigin="anonymous"></script>
     {% block stylesheets %}
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
