Added tracking and removing single currency

--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -24,7 +24,7 @@
 .currency-item-wrapper {
   display: flex;
   align-items: center;
-  height: 50px;
+  min-height: 50px;
   border-radius: 5px;
   margin: 5px 0;
 
