--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,8 +7,13 @@
     <div data-controller="currencies">
         {% if userCurrencies|length > 0 %}
             <div class="currency-lister-wrapper">
-                <h2 class="currency-lister-title">Twoje waluty ({{ userCurrencies|length }})</h2>
-                <div class="currency-lister">
+                <h2 class="currency-lister-title">
+                    Twoje waluty:
+                    <div class="delete-all-currencies-icon">
+                        <i class="fas fa-trash-alt"></i>
+                    </div>
+                </h2>
+                <div class="currency-lister" data-currencies-target="userCurrencies">
                     {% for userCurrency in userCurrencies %}
                         {% include 'components/single-currency.html.twig' with {
                             id : userCurrency.id,
@@ -23,15 +28,15 @@
         {% else %}
             <div class="currency-lister-wrapper missing">
                 <h2 class="currency-lister-title">Brak śledzonych walut</h2>
-                <div class="currency-lister">
+                <div class="currency-lister"  data-currencies-target="userCurrencies">
                     Nie śledzisz jeszcze żadnych walut, poniżej masz waluty które możesz śledzić
                 </div>
             </div>
         {% endif %}
         {% if currencies|length > 0 %}
             <div class="currency-lister-wrapper">
-                <h2 class="currency-lister-title">Waluty do śledzenia ({{ currencies|length }})</h2>
-                <div class="currency-lister">
+                <h2 class="currency-lister-title">Waluty do śledzenia</h2>
+                <div class="currency-lister"  data-currencies-target="currencies">
                     {% for currency in currencies %}
                         {% include 'components/single-currency.html.twig' with {
                             id : currency.id,
@@ -46,7 +51,7 @@
         {% else %}
             <div class="currency-lister-wrapper missing">
                 <h2 class="currency-lister-title">Brak walut</h2>
-                <div class="currency-lister">
+                <div class="currency-lister"  data-currencies-target="currencies">
                     Coś poszło nie tak...
                 </div>
             </div>
