--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -15,6 +15,7 @@
 
 .currency-lister-title {
   margin: 20px 0;
+  position: relative;
 }
 
 .currency-wrapper {
@@ -48,11 +49,24 @@
   }
 }
 
-.currency-title {
-
-}
-
 .currency-info {
   font-size: 12px;
   text-indent: 10px;
+}
+
+.delete-all-currencies-icon {
+  position: absolute;
+  top: 2px;
+  right: 20px;
+  transition: color 0.25s ease-in-out;
+  cursor: pointer;
+
+  &:hover {
+    color: $colorRed;
+  }
+}
+
+.hidden {
+  position: absolute;
+  top: -100vh;
 }
