--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,9 +9,12 @@
             <div class="currency-lister-wrapper">
                 <h2 class="currency-lister-title">
                     Twoje waluty:
-                    <div class="delete-all-currencies-icon">
-                        <i class="fas fa-trash-alt"></i>
-                    </div>
+                    <form method="post">
+                        <label class="delete-all-currencies-icon">
+                            <input type="submit" class="hidden"/>
+                            <i class="fas fa-trash-alt"></i>
+                        </label>
+                    </form>
                 </h2>
                 <div class="currency-lister" data-currencies-target="userCurrencies">
                     {% for userCurrency in userCurrencies %}
@@ -28,7 +31,7 @@
         {% else %}
             <div class="currency-lister-wrapper missing">
                 <h2 class="currency-lister-title">Brak śledzonych walut</h2>
-                <div class="currency-lister"  data-currencies-target="userCurrencies">
+                <div class="currency-lister" data-currencies-target="userCurrencies">
                     Nie śledzisz jeszcze żadnych walut, poniżej masz waluty które możesz śledzić
                 </div>
             </div>
@@ -36,7 +39,7 @@
         {% if currencies|length > 0 %}
             <div class="currency-lister-wrapper">
                 <h2 class="currency-lister-title">Waluty do śledzenia</h2>
-                <div class="currency-lister"  data-currencies-target="currencies">
+                <div class="currency-lister" data-currencies-target="currencies">
                     {% for currency in currencies %}
                         {% include 'components/single-currency.html.twig' with {
                             id : currency.id,
@@ -51,7 +54,7 @@
         {% else %}
             <div class="currency-lister-wrapper missing">
                 <h2 class="currency-lister-title">Brak walut</h2>
-                <div class="currency-lister"  data-currencies-target="currencies">
+                <div class="currency-lister" data-currencies-target="currencies">
                     Coś poszło nie tak...
                 </div>
             </div>
